--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,10 +77,9 @@ ul, ol {
 
 /* Layout */
 .app {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 main {
